# captable-calc

./: .gitignore  README.md  captable-calc.cabal  config.yaml  example_config.yaml  flake.nix
app/: Calc.hs  Config.hs  Main.hs
test/: CalcSpec.hs
