cabal-version:      3.0
name:               captable-calc
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Philipp Klocke
maintainer:         philipp.a.klocke@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable captable-calc
    import:           warnings
    main-is:          Main.hs
    other-modules:    Config
    -- other-extensions:
    build-depends:    base ^>=4.20.2.0, yaml, text
    hs-source-dirs:   app
    default-language: GHC2024
